--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "ffmpeg",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
   },
   "scripts": {
     "watch": "tsc -w"
+  },
+  "dependencies": {
+    "inquirer": "^11.0.2"
   }
 }
