--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/node": "^22.5.5",
+    "@types/nodemon": "^1.19.6",
+    "nodemon": "^3.1.5",
     "typescript": "^5.6.2"
   },
   "scripts": {
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "run": "yarn nodemon --inspect dist/app.js"
   },
   "dependencies": {
     "inquirer": "^11.0.2"
