--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
   "forceConsistentCasingInFileNames": true,
   "strict": true,
   "noImplicitReturns": true,
-  "skipLibCheck": true
+  "skipLibCheck": true,
+    "strictPropertyInitialization": false
 },
 "include": ["src/**/*"],
 }
